package com.arqsoft;

import java.util.ArrayList;

public class Board {
    private ArrayList<Cell> cells;
}
