package edu.upc.arqsoft.server.domain;

public interface Player {
}
