PlayerWhite
PlayerBlack
King
Queen
Rook
Knight
Bishop
Pawn

@startuml

abstract class Piece {
    String color
    bool isValidMove(Coordinate origin, Coordinate destination)
}
class Board {
    Cell getCell(Coordinate c)
}
class Turn {
    void makeMovement(Player p, Coordinate origin, Coordinate destination)
}
class Player {
    String color
}

Game --> "2" Player
Game --> "1" Board : Is played in
Game --> Turn : Manages
Piece <|-- King
Piece <|-- Queen
Piece <|-- Rook
Piece <|-- Knight
Piece <|-- Bishop
Piece <|-- Pawn

Piece --> Player
Piece "0..1" <--> "1" Cell : Is in a
Player --> "1" King
Player --> "0..1" Queen
Player --> "0..2" Rook
Player --> "0..2" Knight
Player --> "0..2" Bishop
Player --> "0..8" Pawn
Player ..> Turn : uses
Cell ..> Coordinate : Is located by
Board o--> "64" Cell : Has a 8x8 Matrix
Board ..> Coordinate

@enduml